Remove the 'min' field from address space plans (#1917)
The 'min' field only applies to routers, and should not be dictated by
address space plans. Instead the plans should set the limits of how much
router credit addresses can use.

Instead, specify minimum router replicas in the standard infra config .router.minReplicas
