# api-server/src/main/resources/swagger.json
@@ -1856,8 +1856,11 @@
                         }
                     }
                 },
+                "minReplicas": {
+                    "type": "integer"
+                },
                 "linkCapacity": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -1942,15 +1945,11 @@
                         "type": "object",
                         "required": [
                             "name",
-                            "min",
                             "max"
                         ],
                         "properties": {
                             "name": {
                                 "type": "string"
-                            },
-                            "min": {
-                                "type": "number"
                             },
                             "max": {
                                 "type": "number"
